;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-1.4.4 relative to sbcl-1.4.3:
  * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
    SYNONYM-STREAMs.
  * bug fix: (pathname-{device,directory,name,type} ... :case :common) works
    as expected. In particular MAKE-PATHNAME composed with the accessors
    roundtrips properly when both use the same :case. (lp#1739906)
  * bug fix: DIRECTORY no longer gets confused when the value of
    *DEFAULT-PATHNAME-DEFAULTS* has a name or type component. (lp#1740563)
  * bug fix: pattern pieces in pathname components are correctly escaped
    during unparsing.
  * bug fix: DELETE-DIRECTORY no longer signals an error when the directory is
    supplied as a pathname with name and/or type components containing escaped
    characters. (lp#1740624)
  * bug fix: weak hash-tables no longer cause GC time to scale superlinearly
    (lp#1241771)
  * bug fix: CANCEL-FINALIZATION operates in approximately constant time
    per operation (lp#1587983)
  * bug fix: big-endian MIPS systems now (mostly) work again (broken since
    1.3.14.x).
  * bug fix: backtrace from arg-count errors on systems other than x86, x86-64,
    ARM, and ARM64 now works again.
  * bug fix: backtrace from asynchronous interrupts on non-x86, non-x86-64
    systems should now be more reliable.
  * enhancement: warnings and errors referring to bindings established by LET,
    LET*, FLET and LABELS point to the offending form more accurately.
  * enhancement: backtrace for invalid argument count produces the exact
    supplied arguments including the extra ones on all platforms (no longer
    just x86, x86-64, ARM, and ARM64).

changes in sbcl-1.4.3 relative to sbcl-1.4.2:
  * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
  * bug fix: DECODE-TIMEOUT and operators accepting a timeout no longer signal
    an error when called with an argument that is of type (real 0) but not
    (unsigned-byte 62) (lp#1727789)