@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.4.4:
+  * enhancement: FIND-PACKAGE does not acquire a mutex
+
 changes in sbcl-1.4.4 relative to sbcl-1.4.3:
   * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
     SYNONYM-STREAMs.
